# dev-sahib

./: .env  .env.example  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  compile.sh  init.sh  server
prompts/: step_1.yaml  step_2.yaml  step_3.yaml  v1.yaml
src/: COT.md  cot.cpp  cot.h  filler.cpp  filler.h  main.cpp  parser.cpp  parser.h
src/db/: db.cpp  db_manager.cpp  db_manager.h  docker-compose.yaml  redis-init.sh  redis.conf.template  setup.sh  structure.JSON
src/db/redis-init/: 01-setup-indexes.sh
src/db/utils/: embedder.cpp  embedder.h  vector_ops.cpp  vector_ops.h
src/tools/: query.cpp
